# comp-eng-benchmark

./: .gitignore  README.md
designsafe/: README.md
graph_vector_rag/: .env_example  README.md  app_config.py  chat_with_graph.py  create_embeddings.py  create_kg_from_pdf.py  pyproject.toml  qa_entry.py  requirements.txt
tapis/: README.md
tapis/benchmark/: LLM_generated_v1..json  LLM_generated_v1.json  LLM_generated_v2.json  bleu_rouge.ipynb  initial_examples.json  metrics.ipynb  qa_evaluation_results.csv
tapis/benchmark/qa_evaluator/: README.md  config.json  pyproject.toml
tapis/benchmark/qa_evaluator/outputs/: qa_evaluation_results.csv  qa_evaluation_results_bck.csv  qa_evaluation_results_jfs.csv
tapis/benchmark/qa_evaluator/scripts/: run_evaluation.py
tapis/benchmark/qa_evaluator/src/qa_evaluator/: evaluator.py
tapis/docs_2_pdf/: README.md  pyproject.toml
tapis/docs_2_pdf/source/: conf.py  index.rst
tapis/docs_2_pdf/source/specialized-services/etl/: overview.rst
tapis/live-docs/: All_Tapis_OpenAPI_Specs.txt  get_docs.sh
