[project]
name = "rtd-pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Stubbs",email = "joestubbs5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinxcontrib-phpdomain (>=0.13.0,<0.14.0)",
    "rst2pdf (>=0.103.1,<0.104.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

